--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="../data/friends.js"></script>
 
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- Chosen -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
-
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script> -->
 </head>
 
 <body>
@@ -38,24 +38,6 @@
 
         <h3><strong>Question 1</strong></h3>
         <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
-        <!-- <select class="chosen-select" id="q1" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q1_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q1">
                 <option value="">Select an option</option>
@@ -69,24 +51,6 @@
 
         <h3><strong>Question 2</strong></h3>
         <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
-        <!-- <select class="chosen-select" id="q2" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q2_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q2">
                 <option value="">Select an option</option>
@@ -98,26 +62,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 3</strong></h3>
         <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
-        <!-- <select class="chosen-select" id="q3" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q3_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
         <div class="dropdown">
             <select class="chosen-select" id="q3">
                 <option value="">Select an option</option>
@@ -129,27 +75,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 4</strong></h3>
         <h4>You rarely do something just out of sheer curiosity.</h4>
-        <!-- <select class="chosen-select" id="q4" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q4_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q4">
                 <option value="">Select an option</option>
@@ -161,27 +88,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 5</strong></h3>
         <h4>People can rarely upset you.</h4>
-        <!-- <select class="chosen-select" id="q5" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q5_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q5">
                 <option value="">Select an option</option>
@@ -193,27 +101,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 6</strong></h3>
         <h4>It is often difficult for you to relate to other people’s feelings.</h4>
-        <!-- <select class="chosen-select" id="q6" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q6_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q6">
                 <option value="">Select an option</option>
@@ -225,27 +114,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 7</strong></h3>
         <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
-        <!-- <select class="chosen-select" id="q7" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q7_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q7">
                 <option value="">Select an option</option>
@@ -259,24 +129,6 @@
 
         <h3><strong>Question 8</strong></h3>
         <h4>You rarely get carried away by fantasies and ideas.</h4>
-        <!-- <select class="chosen-select" id="q8" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q8_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q8">
                 <option value="">Select an option</option>
@@ -291,24 +143,6 @@
         <h3><strong>Question 9</strong></h3>
         <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or
             not.</h4>
-        <!-- <select class="chosen-select" id="q9" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q9_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q9">
                 <option value="">Select an option</option>
@@ -320,27 +154,8 @@
             </select>
         </div>
 
-
         <h3><strong>Question 10</strong></h3>
         <h4>You feel more energetic after spending time with a group of people.</h4>
-        <!-- <select class="chosen-select" id="q10" style="display: none;">
-            <option value=""></option>
-            <option value="1">1 (Strongly Disagree)</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5 (Strongly Agree)</option>
-        </select>
-        <div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q10_chosen"><a
-                class="chosen-single chosen-default"><span>Select an Option</span>
-                <div><b></b></div>
-            </a>
-            <div class="chosen-drop">
-                <div class="chosen-search"><input type="text" autocomplete="off"></div>
-                <ul class="chosen-results"></ul>
-            </div>
-        </div> -->
-
         <div class="dropdown">
             <select class="chosen-select" id="q10">
                 <option value="">Select an option</option>
@@ -359,12 +174,14 @@
         <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"
                 aria-hidden="true"></i>
             Submit</button>
+        <!-- <p>test</p> -->
 
         <hr>
         <footer class="footer">
             <div class="container">
                 <p><a href="/api/friends">API Friends List</a> | <a
-                        href="https://github.com/GIS1974/FriendFinder">GitHub Repo</a></p>
+                        href="https://github.com/GIS1974/FriendFinder">GitHub Repo</a> | <a
+                        href="http://localhost:8080/">Home</a></p>
             </div>
         </footer>
 
@@ -459,13 +276,46 @@
 
                 // AJAX post the data to the friends API.
                 $.post("/api/friends", userData, function (data) {
-                    // console.log(data.scores);
-                });
+                    // console.log(data);
 
+                    // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+                    $("#match-name").text(data.name);
+                    $("#match-img").attr("src", data.photo);
+
+                    // Show the modal with the best match
+                    $("#results-modal").modal("toggle");
+
+                    // $("#pic").append("<p>test</p>");
+
+                });
             } else {
                 alert("Please fill out all fields before submitting!");
             }
+            $(".form-control").reset(); //??????????????????????????????
+
+
+            $.post("/api/user/clear", function () {
+                }); //??????????????????????????????
+
+
+
         });
+
+        // function reset() {
+        //     $(".form-control").reset(),
+        //     // $("#photo").reset(),
+        //     // $("#q1").reset(),
+        //     // $("#q2").reset(),
+        //     // $("#q3").reset(),
+        //     //     $("#q4").reset(),
+        //     //     $("#q5").reset(),
+        //     //     $("#q6").reset(),
+        //     //     $("#q7").reset(),
+        //     //     $("#q8").reset(),
+        //     //     $("#q9").reset(),
+        //     //     $("#q10").reset()
+        // };
+
     </script>
 </body>
 
