Update home page link

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -160,7 +160,7 @@
             <div class="container">
                 <p><a href="/api/friends">API Friends List</a> | <a
                         href="https://github.com/GIS1974/FriendFinder">GitHub Repo</a> | <a
-                        href="http://localhost:8080/">Home</a></p>
+                        href="https://friend-finder-gis1974.herokuapp.com/">Home</a></p>
             </div>
         </footer>
 
